"Declares the third-party dependencies when bzlmod is enabled"
# module("muxpp", "0.0.1", 0)

# bazel_dep(name = "buildifier_prebuilt", version = "6.3.3", dev_dependency = True)
# bazel_dep(name = "spdlog", version = "1.13.0")
# bazel_dep(name = "rules_cc", version = "0.0.9")
# bazel_dep(name = "catch2", version = "3.4.0")
# bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
# bazel run @hedron_compile_commands//:refresh_all
