"Declares the third-party dependencies when bzlmod is enabled"
# module("muxpp", "0.0.1", 0)

# bazel_dep(name = "buildifier_prebuilt", version = "6.3.3", dev_dependency = True)
# bazel_dep(name = "spdlog", version = "1.13.0")
# bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "catch2", version = "3.4.0")

# bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "abseil-cpp", version = "20240116.2")

# bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")
bazel_dep(name = "tcmalloc", version = "0.0.0-20240411-5ed309d")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
# bazel run @hedron_compile_commands//:refresh_all

bazel_dep(name = "toolchains_llvm", version = "1.0.0")

# To directly use a commit from GitHub, replace commit with the commit you want.
# Otherwise, omit this block.
git_override(
    module_name = "toolchains_llvm",
    commit = "329910897f3114f3f5d24407d9abf49b244056d2",
    remote = "https://github.com/bazel-contrib/toolchains_llvm",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "16.0.0",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")
